Coverity analysis defect 153116: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • ClusterScalability Sep1-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/s/resharding/resharding_donor_service.cpp:879: MISSING_LOCK 153116 Accessing "this->_finalOplogEntriesWritten" without holding lock "mongo::ReshardingDonorService::DonorStateMachine._mutex". Elsewhere, "mongo::ReshardingDonorService::DonorStateMachine._finalOplogEntriesWritten" is written to with "DonorStateMachine._mutex" held 1 out of 1 times.

            Assignee:
            Janna Golden (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: