SERVER-109399 Remove unused _finalOplogEntriesWritten promise which has a data race (#41117)

GitOrigin-RevId: 0fc382c9d99ac02f5f701604b0eea3d31bd56fc6